--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
     "name": "douyin-net",
     "version": "1.0.0",
     "description": "",
-    "main": "server/api.js",
+    "main": "pages/api/index.js",
     "scripts": {
-        "start": "node server/api.js",
+        "start": "vercel start",
+        "dev": "vercel dev",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
@@ -12,5 +13,8 @@
     "license": "ISC",
     "dependencies": {
         "express": "^4.18.2"
+    },
+    "devDependencies": {
+        "vercel": "^32.5.1"
     }
 }
