--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
     "name": "douyin-net",
     "version": "1.0.0",
-    "description": "",
-    "main": "pages/api/index.js",
+    "description": "Douyin net API service adapted for Vercel",
+    "main": "pages/api/api.js",
     "scripts": {
-        "start": "vercel start",
-        "dev": "vercel dev",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "dependencies": {
-        "express": "^4.18.2"
-    },
-    "devDependencies": {
-        "vercel": "^32.5.1"
+    "engines": {
+        "node": ">=14"
     }
 }
