--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-    "name": "douyin-net",
+    "name": "vercel-api-project",
     "version": "1.0.0",
-    "description": "Douyin net API service adapted for Vercel",
-    "main": "pages/api/api.js",
+    "description": "A simple API project for Vercel deployment",
+    "main": "api/endpoint.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node api/endpoint.js"
+    },
+    "dependencies": {
+        "@vercel/node": "^2.10.0"
     },
     "keywords": [],
     "author": "",
-    "license": "ISC",
-    "engines": {
-        "node": ">=14"
-    }
-}
+    "license": "ISC"
+}    
