--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
         "start": "node api/endpoint.js"
     },
     "dependencies": {
-        "@vercel/node": "^2.10.0"
+        "@vercel/node": "^2.10.0",
+        "typescript": "^5.2.2"  // 版本号可能不同
     },
     "keywords": [],
     "author": "",
     "license": "ISC"
-}    
+}
