--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
     "dependencies": {
         "@vercel/node": "^2.10.0",
-        "typescript": "^5.2.2"  // 版本号可能不同
+        "typescript": "^5.2.2"
     },
     "keywords": [],
     "author": "",
